--- a/plugins/org.bonitasoft.studio.importer.bar/messages.properties
+++ b/plugins/org.bonitasoft.studio.importer.bar/messages.properties
@@ -47,7 +47,7 @@ actionProperty = Actions
 widgetActionsMigrationDescription = Widget output operation has been converted to operations.
 widgetModifierMigrationDescription = Widget return type modifier has been set.
 widgetModifierNotSetMigrationDescription = Widget return type modifier must be set.
-widgetDataInputAtProcessLevelMigrationDescription = Widget input was using a varaible to initiate its default value. However variable are no more accessible on instantiation form.
+widgetDataInputAtProcessLevelMigrationDescription = Widget input was using a variable to initiate its default value. However variable are no more accessible on instantiation form.
 widgetDataInputMigrationDescription = Widget input has been converted to an expression.
 generalProperty = General
 userAidsProperty = User aids
@@ -64,9 +64,9 @@ displayLabelMigrationDescription = Display label has been converted to an expres
 exampleMigrationDescription = Example script has been converted to an expression.
 initialValueMigrationDescription = Initial value has been converted to an expression.
 buttonActionsMigrationDescription = Submit button actions has been converted to operations.
-validatorParameterMigrationDescription = Valiator parameter has been converted to an expression.
+validatorParameterMigrationDescription = Validator parameter has been converted to an expression.
 validatorsProperty = Validators
-validatorDisplayNameMigrationDescription =  Valiator error message has been converted to an expression.
+validatorDisplayNameMigrationDescription =  Validator error message has been converted to an expression.
 appearanceProperty = Appearance
 maxNumberMigrationDescription = Max number of duplication has been converted to an expression.
 minNumberMigrationDescription = Min number of duplication has been converted to an expression.
