[STUDIO-1699] fix order of migration after problems while importing decision table from 5.9, port to branch bos-studio-6.0-Beta

--- a/plugins/org.bonitasoft.studio.importer.bar/messages.properties
+++ b/plugins/org.bonitasoft.studio.importer.bar/messages.properties
@@ -100,3 +100,4 @@ simDataChangeValueMigrationDescription = Simulation data update expression has b
 noActionRequired = The element has been successfully converted.
 reviewRequired = Review required. The element has been converted but some details must be reviewed.
 actionRequired = Action required. The element cannot be converted automatically.
+migrationReportOf = Import report for {0}
