STUDIO-3041 [6.0.3] Left operand is missing in an operation on File Widget

--- a/plugins/org.bonitasoft.studio.actors/messages.properties
+++ b/plugins/org.bonitasoft.studio.actors/messages.properties
@@ -194,3 +194,18 @@ importOrganizationSuccessfullTitle=Import successful
 importOrganizationSuccessfullMessage=Organization has been imported successfully.
 errorSelectionGroups=You can't select a group and one of its affiliate.
 exportActorFilterTitle=Export actor filter
+organizationHasBeenModifiedTitle=Warning: Organization has been modified
+organizationHasBeenModifiedMessage= {0} has been modified. It is recommended to re-publish it. Do you want to do it now ?
+doNotDisplayAgain=Do not display again.
+userDoesntExistAnymoreTitle=Organization has not been published
+userDoesntExistAnymore=Organization has not been Published. The default user {0} does not exist anymore. Please configure another default user in menu "Organization/Publish...".
+addActor=Add...
+initiator=Initiator
+newActor=New actor
+actorWizardPageTitle=Add a new actor
+organizationHasBeenModifiedTitle=Warning: Organization has been modified
+organizationHasBeenModifiedMessage= {0} has been modified. It is recommended to re-publish it. Do you want to do it now ?
+doNotDisplayAgain=Do not display again.
+userDoesntExistAnymoreTitle=Organization has not been published
+userDoesntExistAnymore=Organization has not been Published. The default user {0} does not exist anymore. Please configure another default user in menu "Organization/Publish...".
+
