--- a/plugins/org.bonitasoft.studio.common.repository/messages.properties
+++ b/plugins/org.bonitasoft.studio.common.repository/messages.properties
@@ -30,3 +30,5 @@ importBonita6xTitle=Import Bonita 6.x file
 importBonita6xError=Error while importing file {0}
 importedFileIsInvalidTitle=Error while importing file
 importedFileIsInvalid=The file {0} is not a valid file
+importErrorTitle=Import error
+incompatibleProductVersion=Product version ({0}) is lower than archive version ({1})
