--- a/plugins/org.bonitasoft.studio.diagram.form.properties/messages.properties
+++ b/plugins/org.bonitasoft.studio.diagram.form.properties/messages.properties
@@ -172,3 +172,4 @@ newDocumentNameHint=Returns the new document name
 multipleExplanation=Expression returning a list of Document names or a list of urls
 generateFromEnumTooltip = Generate expression from a list of option...
 Action_SelectedValue = Selected value  
+widgetNameAllreadyExistError={0} already exists. Please provide another widget name.
