STUDIO-2902 CLONE - user does not know where export was done

--- a/plugins/org.bonitasoft.studio.common.repository/messages.properties
+++ b/plugins/org.bonitasoft.studio.common.repository/messages.properties
@@ -17,7 +17,7 @@ invalidArchive=The selected file is not a valid {0} archive
 invalidFileFormat=Invalid file format
 browseRepository=Browse repositories
 destinationPathMustBeADirectory=Destination path must be a directory
-exportFinishMessage=Export finished successfully
+exportFinishMessage=Export finished successfully to {0}
 exportLabel=Export result
 current=Current
 readOnlyFileTitle=Read-only file
