--- a/bundles/plugins/org.bonitasoft.studio.actors/messages.properties
+++ b/bundles/plugins/org.bonitasoft.studio.actors/messages.properties
@@ -209,4 +209,4 @@ doNotDisplayAgain=Do not display again.
 userDoesntExistAnymoreTitle=Organization has not been published
 userDoesntExistAnymore=Organization has not been Published. The default user {0} does not exist anymore. Please configure another default user in menu "Organization/Publish...".
 UserDoesntExistError=User {0} does not exist in the current organization. Please provide another username.
-
+refactoringActorMappings=Refactoring actor mappings...
